# rust-arrow-sql

./: Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs  reader.rs
src/postgres/: data_types.rs  mod.rs  reader.rs
